force-app/main/default/objects/Contact/fields/HAM_Largest_AF_Pledge_Purpose__c.field-meta.xml
<CustomField>
    <fullName>HAM_Largest_AF_Pledge_Purpose__c</fullName>
    <description>This field is populated by CRMA with purpose of the largest AF purpose by this constituent</description>
    <inlineHelpText>This field is populated by CRMA with purpose of the largest AF purpose by this constituent</inlineHelpText>
    <label>HAM Largest AF Pledge Purpose</label>
    <type>TextArea</type>
</CustomField>