force-app/main/default/objects/Contact/fields/HAM_Largest_gift_purpose__c.field-meta.xml
<CustomField>
    <fullName>HAM_Largest_gift_purpose__c</fullName>
    <description>This field is populated by CRMA with purpose of the lifetime largest gift by this constituent</description>
    <inlineHelpText>This field is populated by CRMA with purpose (Designation) of the lifetime largest gift by this constituent</inlineHelpText>
    <label>HAM Largest gift purpose</label>
    <type>TextArea</type>
</CustomField>