force-app/main/default/objects/Contact/fields/HAM_Last_FY_Paid__c.field-meta.xml
<CustomField>
    <fullName>HAM_Last_FY_Paid__c</fullName>
    <description>Gifts and payments last fiscal year.</description>
    <formula>ucinn_ascendv2__Last_FY_Giving__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gifts and payments last fiscal year.</inlineHelpText>
    <label>Last FY Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>