force-app/main/default/objects/Contact/fields/HAM_Last_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Last_Gift_Date__c</fullName>
    <description>The date of the last gift or payment made by this donor. Populated from CRMA.</description>
    <inlineHelpText>The date of the last gift or payment made by this donor.</inlineHelpText>
    <label>Last Gift Date</label>
    <type>Date</type>
</CustomField>