force-app/main/default/objects/Contact/fields/HAM_Last_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Last_Meeting_Date__c</fullName>
    <description>Last meeting date for the constituent, comes from the Contact Report Object.</description>
    <inlineHelpText>Last meeting date for the constituent, comes from the Contact Report Object.</inlineHelpText>
    <label>Last Meeting Date</label>
    <type>Date</type>
</CustomField>