force-app/main/default/objects/Contact/fields/HAM_Letter_Addressee__c.field-meta.xml
<CustomField>
    <fullName>HAM_Letter_Addressee__c</fullName>
    <formula>IF( HAM_Spouse_or_Partner_Soft_Credit__c=TRUE, ucinn_ascendv2__Recognition_Name__c,ucinn_ascendv2__Full_Name_Formula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Addressee</label>
    <type>Text</type>
</CustomField>