force-app/main/default/objects/Contact/fields/HAM_Letter_Salutation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Letter_Salutation__c</fullName>
    <formula>IF(HAM_Spouse_or_Partner_Soft_Credit__c = FALSE,FirstName,
IF(HAM_Is_Primary_Constituent__c=TRUE,FirstName &amp; &quot; and &quot; &amp; ucinn_ascendv2__Preferred_Spouse__r.FirstName,ucinn_ascendv2__Preferred_Spouse__r.FirstName&amp;&quot; and &quot;&amp;FirstName)
)</formula>
    <label>Letter Salutation</label>
    <type>Text</type>
</CustomField>