force-app/main/default/objects/Contact/fields/HAM_Lifetime_Bequest_Intention__c.field-meta.xml
<CustomField>
    <fullName>HAM_Lifetime_Bequest_Intention__c</fullName>
    <label>Lifetime Bequest Intention</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>