force-app/main/default/objects/Contact/fields/HAM_Lifetime_Committed__c.field-meta.xml
<CustomField>
    <fullName>HAM_Lifetime_Committed__c</fullName>
    <description>Lifetime commitments for a constituent excluding bequest intentions.</description>
    <inlineHelpText>Lifetime commitments for a constituent excluding bequest intentions.</inlineHelpText>
    <label>Lifetime Committed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>