force-app/main/default/objects/Contact/fields/HAM_Lifetime_Committed_w_BQI__c.field-meta.xml
<CustomField>
    <fullName>HAM_Lifetime_Committed_w_BQI__c</fullName>
    <description>This field takes the managed &quot;Lifetime Fundraising&quot; field and applies a new label &quot;Lifetime Committed w/BQI&quot;</description>
    <formula>ucinn_ascendv2__Lifetime_Fundraising__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total lifetime commitments from this constituent. Includes bequest intentions.</inlineHelpText>
    <label>Lifetime Committed w/BQI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>