force-app/main/default/objects/Contact/fields/HAM_Lifetime_Paid__c.field-meta.xml
<CustomField>
    <fullName>HAM_Lifetime_Paid__c</fullName>
    <description>This field takes the managed &quot;Lifetime Cash&quot; field and applies a new label &quot;Lifetime Paid&quot;.</description>
    <formula>ucinn_ascendv2__Lifetime_Cash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total lifetime gifts and payments.</inlineHelpText>
    <label>Lifetime Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>