force-app/main/default/objects/Contact/fields/HAM_LiveAlumni_Employer__c.field-meta.xml
<CustomField>
    <fullName>HAM_LiveAlumni_Employer__c</fullName>
    <description>The LiveAlumni Employer for this constituent. Refreshed regularly from LinkedIn.</description>
    <inlineHelpText>The LiveAlumni Employer for this constituent. Refreshed regularly from LinkedIn.</inlineHelpText>
    <label>LiveAlumni - Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>