force-app/main/default/objects/Contact/fields/HAM_LiveAlumni_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>HAM_LiveAlumni_Job_Title__c</fullName>
    <description>The LiveAlumni Job Title for this constituent. Refreshed regularly from LinkedIn.</description>
    <inlineHelpText>The LiveAlumni Job Title for this constituent. Refreshed regularly from LinkedIn.</inlineHelpText>
    <label>LiveAlumni - Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>