force-app/main/default/objects/Contact/fields/HAM_LiveAlumni_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>HAM_LiveAlumni_LinkedIn_URL__c</fullName>
    <description>The LinkedIn URL provided by LiveAlumni for this constituent.</description>
    <inlineHelpText>The LinkedIn URL provided by LiveAlumni for this constituent.</inlineHelpText>
    <label>LiveAlumni - LinkedIn URL</label>
    <type>Url</type>
</CustomField>