force-app/main/default/objects/Contact/fields/HAM_Name_w_Suffix__c.field-meta.xml
<CustomField>
    <fullName>HAM_Name_w_Suffix__c</fullName>
    <formula>ucinn_ascendv2__Full_Name_Formula__c&amp;&quot; &quot;&amp;HAM_Institutional_Suffix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name w/Suffix</label>
    <type>Text</type>
</CustomField>