force-app/main/default/objects/Contact/fields/HAM_Not_a_Prospect__c.field-meta.xml
<CustomField>
    <fullName>HAM_Not_a_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this constituent is a development prospect or not. If checked indicates this is not a prospect. Populated automatically based on the stage of the prospect.</description>
    <inlineHelpText>Indicates whether this constituent is a development prospect or not. If checked indicates this is not a prospect. Populated automatically based on the stage of the prospect.</inlineHelpText>
    <label>Not a Prospect</label>
    <type>Checkbox</type>
</CustomField>