force-app/main/default/objects/Contact/fields/HAM_Number_of_Channels_Contactable__c.field-meta.xml
<CustomField>
    <fullName>HAM_Number_of_Channels_Contactable__c</fullName>
    <label>Number of Channels Contactable</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>