force-app/main/default/objects/Contact/fields/HAM_Open_Pledge_Review__c.field-meta.xml
<CustomField>
    <fullName>HAM_Open_Pledge_Review__c</fullName>
    <description>Link to a filtered lightning report for a given constituent ID.</description>
    <formula>HYPERLINK(
&quot;https://hamiltoncollege.lightning.force.com/lightning/r/Report/00OU1000001RfBNMA0/view?queryScope=userFolders&amp;fv2=&quot;&amp;Id,&quot;Open Intention Review&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>View a summary of open intention for this constituent</inlineHelpText>
    <label>Open Intention Review</label>
    <type>Text</type>
</CustomField>