force-app/main/default/objects/Contact/fields/HAM_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>HAM_Outstanding_Balance__c</fullName>
    <label>Outstanding Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>