force-app/main/default/objects/Contact/fields/HAM_Overall_Fundraising_Goal_Amount_CYR__c.field-meta.xml
<CustomField>
    <fullName>HAM_Overall_Fundraising_Goal_Amount_CYR__c</fullName>
    <description>The goal amount being pursued this fiscal year for the prospect as a total commitment amount. The actual pursuit and commitment may extend beyond this fiscal year. The amount may change over time, and can include more than one initiative but the largest share will be for the primary initiative interest.</description>
    <inlineHelpText>The goal amount being pursued this fiscal year for the prospect as a total commitment amount. The actual pursuit and commitment may extend beyond this fiscal year. The amount may change over time, and can include more than one initiative but the largest share will be for the primary initiative interest.</inlineHelpText>
    <label>Overall Fundraising Goal Amount - CYR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>