force-app/main/default/objects/Contact/fields/HAM_Overall_Strategy_Notes__c.field-meta.xml
<CustomField>
    <fullName>HAM_Overall_Strategy_Notes__c</fullName>
    <description>The brief overarching strategy for this fiscal year for the prospect (255 characters or less). Should articulate cultivation steps around the primary initiative interest and any needed pending or next steps. Full strategy should be kept as supplemental in the strategy maps.</description>
    <inlineHelpText>The brief overarching strategy for this fiscal year for the prospect (255 characters or less). Should articulate cultivation steps around the primary initiative interest and any needed pending or next steps. Full strategy should be kept as supplemental in the strategy maps.</inlineHelpText>
    <label>Overall Strategy Notes</label>
    <type>TextArea</type>
</CustomField>