force-app/main/default/objects/Contact/fields/HAM_Parent_Suffix__c.field-meta.xml
<CustomField>
    <fullName>HAM_Parent_Suffix__c</fullName>
    <label>Parent Suffix</label>
    <length>25</length>
    <type>Text</type>
</CustomField>