force-app/main/default/objects/Contact/fields/HAM_Parents__c.field-meta.xml
<CustomField>
    <fullName>HAM_Parents__c</fullName>
    <description>This field is populated by CRMA with both parent names separated by ,</description>
    <inlineHelpText>This field is populated by CRMA with both parent names separated by ,</inlineHelpText>
    <label>Parents</label>
    <type>TextArea</type>
</CustomField>