force-app/main/default/objects/Contact/fields/HAM_Past_Parent_Inactive__c.field-meta.xml
<CustomField>
    <fullName>HAM_Past_Parent_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past Parent Inactive</label>
    <type>Checkbox</type>
</CustomField>