force-app/main/default/objects/Contact/fields/HAM_Phone_and_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Phone_and_Type__c</fullName>
    <formula>IF(NOT(ISBLANK( TEXT(ucinn_ascendv2__Preferred_Phone_Type__c ))),HAM_Formatted_Phone__c + &apos; (&apos; + TEXT(ucinn_ascendv2__Preferred_Phone_Type__c) + &apos;)&apos;,HAM_Formatted_Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone and Type</label>
    <type>Text</type>
</CustomField>