force-app/main/default/objects/Contact/fields/HAM_Portal_Purposes__c.field-meta.xml
<CustomField>
    <fullName>HAM_Portal_Purposes__c</fullName>
    <description>This fields is populated from CRMA with a concatenated values of all the purposes for the portal</description>
    <inlineHelpText>This fields is populated from CRMA with a concatenated values of all the purposes for the portal</inlineHelpText>
    <label>HAM Portal Purposes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>