force-app/main/default/objects/Contact/fields/HAM_Preferred_Chapter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Preferred_Chapter__c</fullName>
    <label>Preferred Chapter</label>
    <type>TextArea</type>
</CustomField>