force-app/main/default/objects/Contact/fields/HAM_Preferred_Chapter_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Preferred_Chapter_Code_Name__c</fullName>
    <description>This for CRMA use only</description>
    <formula>HAM_Preferred_Chapter_Lookup__r.Name</formula>
    <inlineHelpText>This for CRMA use only</inlineHelpText>
    <label>HAM Preferred Chapter Code Name</label>
    <type>Text</type>
</CustomField>