force-app/main/default/objects/Contact/fields/HAM_Preferred_Chapter_Lookup__c.field-meta.xml
<CustomField>
    <fullName>HAM_Preferred_Chapter_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Chapter for which Preferred is True</description>
    <label>Preferred Chapter Lookup</label>
    <referenceTo>HAM_Chapter_Lookup__c</referenceTo>
    <relationshipLabel>Constituents (Preferred Chapter Lookup)</relationshipLabel>
    <relationshipName>Constituents1</relationshipName>
    <type>Lookup</type>
</CustomField>