force-app/main/default/objects/Contact/fields/HAM_PreferredEmail__c.field-meta.xml
<CustomField>
    <fullName>HAM_PreferredEmail__c</fullName>
    <formula>CASE(ucinn_ascendv2__Preferred_Email_Type__c, 
&quot;Personal&quot;, ucinn_ascendv2__Personal_Email__c, 
&quot;Business&quot;, ucinn_ascendv2__Business_Email__c, 
&quot;Campus&quot;, ucinn_ascendv2__Campus_Email__c,
&quot;Other&quot;, ucinn_ascendv2__Other_Email__c, Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HAM Preferred Email</label>
    <type>Text</type>
</CustomField>