force-app/main/default/objects/Contact/fields/HAM_Primary_Initiative_Interest__c.field-meta.xml
<CustomField>
    <fullName>HAM_Primary_Initiative_Interest__c</fullName>
    <description>The primary initiative of interest currently identified for the potential donor. There can be only one primary initiative at a time, and it may change over time.</description>
    <inlineHelpText>The primary initiative of interest currently identified for the potential donor. There can be only one primary initiative at a time, and it may change over time.</inlineHelpText>
    <label>Primary Initiative Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scholarship Aid</fullName>
            </value>
            <value>
                <fullName>Innovation Center</fullName>
            </value>
            <value>
                <fullName>Common Ground</fullName>
            </value>
            <value>
                <fullName>Professorship</fullName>
            </value>
            <value>
                <fullName>Residence Halls</fullName>
            </value>
            <value>
                <fullName>Community Living/Social Spaces</fullName>
            </value>
            <value>
                <fullName>Career Center</fullName>
            </value>
            <value>
                <fullName>Chaplaincy</fullName>
            </value>
            <value>
                <fullName>Not Active at This Time</fullName>
            </value>
            <value>
                <fullName>Other (add to Overall Strategy Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>