force-app/main/default/objects/Contact/fields/HAM_Privacy_Flag__c.field-meta.xml
<CustomField>
    <fullName>HAM_Privacy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Flag</label>
    <type>Checkbox</type>
</CustomField>