force-app/main/default/objects/Contact/fields/HAM_PRM_Email__c.field-meta.xml
<CustomField>
    <fullName>HAM_PRM_Email__c</fullName>
    <formula>ucinn_ascendv2__PRM__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRM Email</label>
    <type>Text</type>
</CustomField>