force-app/main/default/objects/Contact/fields/HAM_PRM_Phone__c.field-meta.xml
<CustomField>
    <fullName>HAM_PRM_Phone__c</fullName>
    <formula>ucinn_ascendv2__PRM__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRM Phone</label>
    <type>Text</type>
</CustomField>