force-app/main/default/objects/Contact/fields/HAM_PRM_Role__c.field-meta.xml
<CustomField>
    <fullName>HAM_PRM_Role__c</fullName>
    <description>Displays the Role on the PRM assignment from the HH record.</description>
    <inlineHelpText>Role associated with current PRM assignment</inlineHelpText>
    <label>PRM Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>