force-app/main/default/objects/Contact/fields/HAM_Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>HAM_Profile_Picture__c</fullName>
    <formula>IF(ISBLANK(HAM_Profile_Picture_URL__c), null, HYPERLINK(HAM_Profile_Picture_URL__c, IMAGE(HAM_Profile_Picture_URL__c, ucinn_ascendv2__Full_Name_Formula__c , 90, -1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>؜</label>
    <type>Text</type>
</CustomField>