force-app/main/default/objects/Contact/fields/HAM_Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>HAM_Profile_Picture_URL__c</fullName>
    <description>URL pointing to the public profile picture. This is fed into Salesforce and any edits will not be sent to other systems and will likely be overwritten.</description>
    <label>Hamilton Profile Picture URL</label>
    <type>Url</type>
</CustomField>