force-app/main/default/objects/Contact/fields/HAM_Pure_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Pure_Donor_Status__c</fullName>
    <label>Pure Donor Status</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>