force-app/main/default/objects/Contact/fields/HAM_Quiver__c.field-meta.xml
<CustomField>
    <fullName>HAM_Quiver__c</fullName>
    <description>Specific giving opportunities with more breadth in gift bands. May be part of Primary Initiative Interests or alternative conservative giving purposes.</description>
    <inlineHelpText>Specific giving opportunities with more breadth in gift bands. May be part of Primary Initiative Interests or alternative conservative giving purposes.</inlineHelpText>
    <label>Quiver</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AIIS</fullName>
            </value>
            <value>
                <fullName>Bridge</fullName>
            </value>
            <value>
                <fullName>Endowed scholarships</fullName>
            </value>
            <value>
                <fullName>Hamilton Fund Scholarship</fullName>
            </value>
            <value>
                <fullName>Individual Sports</fullName>
            </value>
            <value>
                <fullName>Internship Funding - JHS</fullName>
            </value>
            <value>
                <fullName>Internship Funding - JHS+</fullName>
            </value>
            <value>
                <fullName>Internship Funding - Sadove</fullName>
            </value>
            <value>
                <fullName>Internship Funding - SIF</fullName>
            </value>
            <value>
                <fullName>Levitt</fullName>
            </value>
            <value>
                <fullName>Other (add to Overall Strategy Notes)</fullName>
            </value>
            <value>
                <fullName>Renovating 3989 Campus Rd</fullName>
            </value>
            <value>
                <fullName>Research Funds</fullName>
            </value>
            <value>
                <fullName>Testing Center</fullName>
            </value>
            <value>
                <fullName>Title IX Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>