force-app/main/default/objects/Contact/fields/HAM_Reunion_Year__c.field-meta.xml
<CustomField>
    <fullName>HAM_Reunion_Year__c</fullName>
    <label>Reunion Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>