force-app/main/default/objects/Contact/fields/HAM_Secondary_Chapter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Secondary_Chapter__c</fullName>
    <label>Secondary Chapter</label>
    <type>TextArea</type>
</CustomField>