force-app/main/default/objects/Contact/fields/HAM_Send_To_Marketing_Cloud__c.field-meta.xml
<CustomField>
    <fullName>HAM_Send_To_Marketing_Cloud__c</fullName>
    <formula>OR(AND(HAM_Contactable_by_Email__c = true,HAM_Is_Active__c = true,HAM_PreferredEmail__c &lt;&gt; null),ucinn_ascendv2__Primary_Contact_Type__c = &apos;Student&apos;,ucinn_ascendv2__Primary_Contact_Type__c = &apos;Employee&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HAM Send To Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>