force-app/main/default/objects/Contact/fields/HAM_Solicitable_by_Phone__c.field-meta.xml
<CustomField>
    <fullName>HAM_Solicitable_by_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitable by Phone</label>
    <type>Checkbox</type>
</CustomField>