force-app/main/default/objects/Contact/fields/HAM_Solicitable_by_Text__c.field-meta.xml
<CustomField>
    <fullName>HAM_Solicitable_by_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitable by Text</label>
    <type>Checkbox</type>
</CustomField>