force-app/main/default/objects/Contact/fields/HAM_Spouse_Email__c.field-meta.xml
<CustomField>
    <fullName>HAM_Spouse_Email__c</fullName>
    <formula>ucinn_ascendv2__Preferred_Spouse__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse Email</label>
    <type>Text</type>
</CustomField>