force-app/main/default/objects/Contact/fields/HAM_Spouse_External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_Spouse_External_System_ID__c</fullName>
    <description>The Colleague ID associated with this constituent&apos;s spouse.</description>
    <formula>ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__External_System_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Colleague ID associated with this constituent&apos;s spouse.</inlineHelpText>
    <label>Spouse External System ID</label>
    <type>Text</type>
</CustomField>