force-app/main/default/objects/Contact/fields/HAM_Spouse_or_Partner_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>HAM_Spouse_or_Partner_Soft_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse or Partner Soft Credit</label>
    <type>Checkbox</type>
</CustomField>