force-app/main/default/objects/Contact/fields/HAM_Spouse_Reunion_Year__c.field-meta.xml
<CustomField>
    <fullName>HAM_Spouse_Reunion_Year__c</fullName>
    <formula>ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Preferred_Spouse__r.HAM_Reunion_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse Reunion Year</label>
    <type>Text</type>
</CustomField>