force-app/main/default/objects/Contact/fields/HAM_StudentHereAway__c.field-meta.xml
<CustomField>
    <fullName>HAM_StudentHereAway__c</fullName>
    <label>Student Here/Away</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HERE</fullName>
            </value>
            <value>
                <fullName>AWAY</fullName>
            </value>
            <value>
                <fullName>NOT ENROLLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>