force-app/main/default/objects/Contact/fields/HAM_Surv_Spouse_Suffix__c.field-meta.xml
<CustomField>
    <fullName>HAM_Surv_Spouse_Suffix__c</fullName>
    <label>Surv Spouse Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>