force-app/main/default/objects/Contact/fields/HAM_Ten_to_Fifth__c.field-meta.xml
<CustomField>
    <fullName>HAM_Ten_to_Fifth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ten to the Fifth</label>
    <type>Checkbox</type>
</CustomField>