force-app/main/default/objects/Contact/fields/HAM_Total_Estimated_Assets__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Estimated_Assets__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This field is populated from rating object whenever it is updated</description>
    <inlineHelpText>This field is populated from rating object whenever it is updated</inlineHelpText>
    <label>Total Estimated Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>