force-app/main/default/objects/Contact/fields/HAM_Total_Years_of_Giving__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Years_of_Giving__c</fullName>
    <description>Total number of years (not necessarily consecutive) that the donor gave to Hamilton.</description>
    <label>Number of Years Giving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>