force-app/main/default/objects/Contact/fields/HAM_Trustee__c.field-meta.xml
<CustomField>
    <fullName>HAM_Trustee__c</fullName>
    <formula>IF(
OR(
INCLUDES(ucinn_ascendv2__Contact_Type__c,&apos;Trustee&apos;)),true,false)</formula>
    <label>HAM Trustee</label>
    <type>Checkbox</type>
</CustomField>