force-app/main/default/objects/Contact/fields/HAM_Web_ID_Username__c.field-meta.xml
<CustomField>
    <fullName>HAM_Web_ID_Username__c</fullName>
    <description>The Hamilton username of the person. Typically used for logging in the My Hamilton and PeopleGrove.</description>
    <label>Web ID (Username)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>