force-app/main/default/objects/Contact/fields/HAMOverall_Fundraising_Goal_Expected_CYR__c.field-meta.xml
<CustomField>
    <fullName>HAMOverall_Fundraising_Goal_Expected_CYR__c</fullName>
    <description>The likely expected amount this fiscal year for the prospect as a total commitment amount. The actual pursuit and commitment may extend beyond this fiscal year. The expected amount may change over time, and can include more than one initiative but the largest share will be for the primary initiative interest.</description>
    <inlineHelpText>The likely expected amount this fiscal year for the prospect as a total commitment amount. The actual pursuit and commitment may extend beyond this fiscal year. The expected amount may change over time, and can include more than one initiative but the largest share will be for the primary initiative interest.</inlineHelpText>
    <label>Overall Fundraising Goal Expected - CYR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>